pluralize SEAI in SI

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -151,7 +151,7 @@ The Ca+Mg concentrations of felsic (1,521~mol/m$^{3}$), intermediate (4,759~mol/
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.8\textwidth]{Figures/resolution_sensitivity.pdf}
-    \caption{Histograms showing the difference in the area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel that results from starting with an 0.1\degrees $\times$ 0.1\degrees GLiM raster versus an 0.05\degrees $\times$ 0.05\degrees GLiM raster. The left panel is calculated over all land pixels, whereas the right panel is calculated over land pixels in the SEAI only. Both panels use the parameter values that produced the highest $r^{2}$ during calibration: metamorphic$_{Ca+Mg}=2500$~mol/m$^{3}$ and sediment$_{Ca+Mg}=2000$~mol/m$^{3}$.}
+    \caption{Histograms showing the difference in the area-weighted mean Ca+Mg concentration of the surface in each 0.5\degrees $\times$ 0.5\degrees pixel that results from starting with an 0.1\degrees $\times$ 0.1\degrees GLiM raster versus an 0.05\degrees $\times$ 0.05\degrees GLiM raster. The left panel is calculated over all land pixels, whereas the right panel is calculated over land pixels in the SEAIs only. Both panels use the parameter values that produced the highest $r^{2}$ during calibration: metamorphic$_{Ca+Mg}=2500$~mol/m$^{3}$ and sediment$_{Ca+Mg}=2000$~mol/m$^{3}$.}
     \label{fig:resolution_sensitivity}
 \end{figure}
 
@@ -169,7 +169,7 @@ We also explore the sensitivity of the area-weighted mean Ca+Mg concentration of
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/r2_cross_plot.pdf}
-    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 573 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (i.e. the orange points in Figure \ref{fig:W_vs_r2}). Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 573 parameters combinations. Watersheds within the compilation of \citet{Gaillardet1999a} that are in the SEAI (Fly, Kikori, Purari, and Sepik watersheds, all in New Guinea) are indicated in green. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
+    \caption{Modeled vs. data-constrained \COtwo consumption in watersheds around the world. \textbf{A)} Each point represents a single watershed, and the y-value of the point shows the mean value of the 573 parameter combinations that produce individual watershed \COtwo consumption fluxes that approximate those estimated in the literature for the present-day (i.e. the orange points in Figure \ref{fig:W_vs_r2}). Whiskers extend to the minimum and maximum modeled watershed \COtwo consumption fluxes for the 573 parameters combinations. Watersheds within the compilation of \citet{Gaillardet1999a} that are in the SEAIs (Fly, Kikori, Purari, and Sepik watersheds, all in New Guinea) are indicated in green. \textbf{B)} Same as A, but only showing the parameter combination that produced that highest $r^{2}$. The chemical weathering and regolith thickness maps of this parameter combination are shown in Figure \ref{fig:weathering_regolith_maps}.}
     \label{fig:r2_cross_plot}
 \end{figure}
 
@@ -236,27 +236,27 @@ Each parameter combination predicts a different total \COtwo consumption that sh
     \label{fig:lithology_composition}
 \end{figure}
 
-A related issue is that our analysis focuses on the weathering of Ca and Mg silicates. Sources of alkalinity to the ocean include the four major cations of Ca, Mg, Na and K. A common approach for the long-term carbon cycle follows that of \citet{Berner1983a} where an emphasis is placed on Ca and Mg with the weathering of Na and K silicates considered to not be a long-term sink of \COtwo. The reasoning behind this assumption is that while weathering of these silicates can lead to transient uptake of \COtwo, this uptake is balanced by release. The ultimate mechanism through which silicate weathering sequesters carbon is the incorporation of Ca+Mg carbonates into the lithosphere. Given that Na and K are not precipitating carbonate, when simulating long term steady-state solutions, as we are here, it is valid to follow the approach of \citet{Berner1983a} and not consider the Na and K cycles. Complexity arises given the long residence time of Na and K in seawater ($\sim$45--80~m.y. for Na, and $\sim$8--10~m.y. for K; \citealp{Emerson2008a, Lecuyer2016a}) and the lag between the generation of alkalinity and its consumption that could modulate the carbonate system. Dynamic modeling of the effects of the Na and K cycles on the long term carbon cycle is an area ripe for future research although uncertainty in their sinks and the timescale of the processes that control them make them difficult to parameterize. An alternative approach for estimating carbon sequestration associated with silicate weathering that sought to incorporate all four cations was taken by \citet{France-Lanord1997a} who used a formulation of $\Delta \textrm{CO}_2 = \Delta \textrm{Mg} + \Delta \textrm{Ca} + 0.15 \Delta \textrm{Na} + 0.1 \Delta \textrm{K}$. This relationship, also applied by \citet{Schopka2011a}, assumes that all Ca$^{2+}$ and Mg$^{2+}$ eventually forms carbonates and applies an estimate that 20\% of K$^{+}$ and 30\% of Na$^{+}$ exchanges for Ca and Mg and ultimately produces carbonate (and considers charge balance). Different parameterizations such as that of \citet{France-Lanord1997a} could modulate our estimates, but the importance of the emergence of the SEAI on Neogene \pCOtwo would remain unchanged. The relative importance of mafic lithologies also remains given that with significantly higher Ca+Mg concentrations and subequal Na+K concentrations to intermediate/felsic lithologies they have the highest Ca+Mg+Na+K concentrations (Fig. \ref{fig:lithology_composition}).
+A related issue is that our analysis focuses on the weathering of Ca and Mg silicates. Sources of alkalinity to the ocean include the four major cations of Ca, Mg, Na and K. A common approach for the long-term carbon cycle follows that of \citet{Berner1983a} where an emphasis is placed on Ca and Mg with the weathering of Na and K silicates considered to not be a long-term sink of \COtwo. The reasoning behind this assumption is that while weathering of these silicates can lead to transient uptake of \COtwo, this uptake is balanced by release. The ultimate mechanism through which silicate weathering sequesters carbon is the incorporation of Ca+Mg carbonates into the lithosphere. Given that Na and K are not precipitating carbonate, when simulating long term steady-state solutions, as we are here, it is valid to follow the approach of \citet{Berner1983a} and not consider the Na and K cycles. Complexity arises given the long residence time of Na and K in seawater ($\sim$45--80~m.y. for Na, and $\sim$8--10~m.y. for K; \citealp{Emerson2008a, Lecuyer2016a}) and the lag between the generation of alkalinity and its consumption that could modulate the carbonate system. Dynamic modeling of the effects of the Na and K cycles on the long term carbon cycle is an area ripe for future research although uncertainty in their sinks and the timescale of the processes that control them make them difficult to parameterize. An alternative approach for estimating carbon sequestration associated with silicate weathering that sought to incorporate all four cations was taken by \citet{France-Lanord1997a} who used a formulation of $\Delta \textrm{CO}_2 = \Delta \textrm{Mg} + \Delta \textrm{Ca} + 0.15 \Delta \textrm{Na} + 0.1 \Delta \textrm{K}$. This relationship, also applied by \citet{Schopka2011a}, assumes that all Ca$^{2+}$ and Mg$^{2+}$ eventually forms carbonates and applies an estimate that 20\% of K$^{+}$ and 30\% of Na$^{+}$ exchanges for Ca and Mg and ultimately produces carbonate (and considers charge balance). Different parameterizations such as that of \citet{France-Lanord1997a} could modulate our estimates, but the importance of the emergence of the SEAIs on Neogene \pCOtwo would remain unchanged. The relative importance of mafic lithologies also remains given that with significantly higher Ca+Mg concentrations and subequal Na+K concentrations to intermediate/felsic lithologies they have the highest Ca+Mg+Na+K concentrations (Fig. \ref{fig:lithology_composition}).
 
 \section*{Climate Model}
 
 For the climate model component of GEOCLIM, we use temperature and runoff fields from a subset of the GFDL CM2.0 experiments (\citealp{Delworth2006a, Delworth2006b}; available for download at \url{https://nomads.gfdl.noaa.gov/dods-data/gfdl_cm2_0/}) These experiments were performed in order to explore the effect of various changes in forcing agents on climate since ca. 1860 at 2.0\degrees $\times$ 2.5\degrees resolution. In the ``1860 control'' experiment, forcing agents representative of conditions ca. 1860 (including \COtwo, CH$_{4}$, N$_{2}$O, O$_{3}$, sulfates, carbon, dust, sea salt, solar irradiance, and the distribution of land cover types) are held constant for 500 years after reaching equilibrium. \pCOtwo in 1860 is assumed to be 286~ppm. In the ``+1\%/yr to 2$\times$'' experiment, initial conditions are taken from the ``1860 control'' experiment, then \pCOtwo is prescribed to increase from 286~ppm at a compounded rate of +1\% per year for 70 years, when \pCOtwo reaches double (572~ppm) of the initial value. \pCOtwo is then held constant until the end of the 280 year experiment. All non-\COtwo forcing agents are held constant. The ``+1\%/yr to 4$\times$'' experiment is identical to the ``+1\%/yr to 2$\times$'' experiment, except that \pCOtwo is prescribed to increase for 140 years, when \pCOtwo reaches quadruple (1144~ppm) of the initial value. \pCOtwo is then held constant for 160 years. We take the mean of the last 100 years of each of these three experiments (when \pCOtwo is being held constant at its final level) to obtain temperature and runoff fields for 286, 572, and 1144~ppm \pCOtwo respectively. Temperature and runoff fields associated with \pCOtwo values between the three modeled \pCOtwo levels (286, 572, and 1144~ppm) are obtained through linear interpolation between the model results.
 
-Given that precipitation in the SEAI is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water \citep{Donohoe2017a}, the current approach of using a climate model forced by modern paleogeography for all SEAI scenarios is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable. The climate model also assumes the present-day extent of ice-sheets for all \pCOtwo levels. However, without ice-sheets, the global climate would be warmer for a given \pCOtwo (hysteresis loop; \citealp{Pollard2005b}), but the amount of emergent land would be lower. We expect this bias to be minimal, as all of our modeled \pCOtwo estimates fall below the glaciation threshold for Antarctica.
+Given that precipitation in the SEAIs is primarily driven by large-scale convective upwelling leading to high precipitation over both land and water \citep{Donohoe2017a}, the current approach of using a climate model forced by modern paleogeography for all SEAIs scenarios is a reasonable approximation for this region. However, for paleogeographic change that would have very significantly modified precipitation over broad swathes of land such as growth of the Himalaya, this approach of using modern climate model results is not viable. The climate model also assumes the present-day extent of ice-sheets for all \pCOtwo levels. However, without ice-sheets, the global climate would be warmer for a given \pCOtwo (hysteresis loop; \citealp{Pollard2005b}), but the amount of emergent land would be lower. We expect this bias to be minimal, as all of our modeled \pCOtwo estimates fall below the glaciation threshold for Antarctica.
 
 \section*{Southeast Asian Islands Scenarios}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/SEAI_fracs.jpg}
-    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of the Southeast Asian islands (SEAI) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines. Total areas of each lithologic category within the SEAI for each of these tested scenarios is shown in Figure \ref{fig:lithology_areas}.}
+    \caption{0.5\degrees $\times$ 0.5\degrees lithologic maps of the Southeast Asian islands (SEAIs) used to force GEOCLIM. Only the 15~Ma scenarios are shown here, but the 10 and 5~Ma scenarios would be similar, using the 10 and 5~Ma shorelines shown in Figure 1 of the main text instead. Each column represents a tested scenario. Each row represents a lithologic category. Solid black lines show present-day shorelines. Total areas of each lithologic category within the SEAIs for each of these tested scenarios is shown in Figure \ref{fig:lithology_areas}.}
     \label{fig:SEAI_fracs}
 \end{figure}
 
 \begin{figure}[h!]
     \centering
     \includegraphics[width=1\textwidth]{Figures/lithology_areas.pdf}
-    \caption{Total area of the lithologic categories within the SEAI for each tested scenario. Note that the grey bars in the middle panel indicate the fractional area of each lithologic category for the entire Earth.}
+    \caption{Total area of the lithologic categories within the SEAIs for each tested scenario. Note that the grey bars in the middle panel indicate the fractional area of each lithologic category for the entire Earth.}
     \label{fig:lithology_areas}
 \end{figure}
 
@@ -270,13 +270,13 @@ Given that precipitation in the SEAI is primarily driven by large-scale convecti
 \begin{figure}[h!]
     \centering
     \includegraphics[width=0.6\textwidth]{Figures/paleogeographic_reconstructions.pdf}
-    \caption{Paleogeographically-reconstructed paleoshorelines for SEAI at 5, 10, and 15~Ma, using the paleoshoreline reconstruction of this study coupled to the paleogeographic model of \citet{Matthews2016a}.}
+    \caption{Paleogeographically-reconstructed paleoshorelines for the SEAIs at 5, 10, and 15~Ma, using the paleoshoreline reconstruction of this study coupled to the paleogeographic model of \citet{Matthews2016a}.}
     \label{fig:paleogeographic_reconstructions}
 \end{figure}
 
-We use geological data to quantify the changes in the area of SEAI over the past 15~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAI'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in SEAI. To generate the lithologic map used in the ``paleo-SEAI'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of SEAI for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of SEAI for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land in the region that is not exposed today. The assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs of granite do not appear further to the northwest in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the Sunda Shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0043~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf. For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation. For other minor islands in the region that were exposed 15, 10, or 5~m.y. ago, but are currently submerged, we take the same approach as that described for the Sunda Shelf to generate the runoff field. For the slope and lithology, we take the mean slope and Ca+Mg concentrations from neighbouring pixels. We also remove the Greenland ice sheet in the ``paleo-SEAI'' scenarios, to be consistent with Northern Hemisphere ice sheets developing after 5~Ma \citep{Haug2005a}. The runoff field over Greenland is generated using the same method as that for the Sunda Shelf. For the slope, we take the mean slope value (0.0529~m/m) of land for which slope data exists around the edges of Greenland, and assign this value to all pixels of Greenland covered by the ice sheet. We also assign the Ca+Mg concentration of bulk continental crust to these pixels.
+We use geological data to quantify the changes in the area of the SEAIs over the past 15~m.y. (described in detail in \textit{Paleoshoreline Reconstruction and Geological Synthesis}). To generate the lithologic map used in the ``removed SEAIs'' scenario (Fig. \ref{fig:SEAI_fracs}), we remove all land associated with arc-continent collision in the SEAIs. To generate the lithologic map used in the ``paleo-SEAIs'' scenarios (Fig. \ref{fig:SEAI_fracs}), we take the estimated paleoshorelines of the SEAIs for 15, 10, and 5~Ma, then remove all land that falls outside of these bounds. The slope and lithologic classification of each pixel is identical to that of the present day, provided that these pixels fall within the estimated paleoshorelines of the SEAIs for their respective time slice. This means that while we are changing the amount of emergent land, we are not changing the latitudinal or longitudinal position and are keeping the slope of emerged pixels the same. Given that similar distributions of lithology and slope are reasonable in the past and that latitudinal translation has been relatively minor, we consider this simplification to be reasonable to first-order (Fig. \ref{fig:paleogeographic_reconstructions}). We then add land in the region that is not exposed today. The assignment of lithology, runoff, and slope for pixels on the Sunda Shelf is not trivial, given that the shelf is not currently exposed. As discussed in \textit{Paleoshoreline Reconstruction and Geological Synthesis}, the Sunda Shelf is a flat-lying, relatively stable platform of continental crust. Islands between Malaysia/Sumatra and Borneo are composed of granite and are surrounded by shallow marine siliciclastic sediments \citep{Darmadi2007a, Hall2009a, Hall2013b}. However, basement highs of granite do not appear further to the northwest in the Gulf of Thailand, and seismic and drill core data suggest siliciclastic fluvial systems draining out toward the South China Sea when the Sunda Shelf was exposed \citep{Darmadi2007a}. We therefore assign pixels of the Sunda Shelf between Malaysia/Sumatra and Borneo to be 50\% felsic and 50\% sediment, and pixels further to the north to be 100\% sediment. For the slope, we take the mean slope value (0.0043~m/m) of relatively flat land on eastern Sumatra, and assign this value to all pixels of the Sunda Shelf. For the runoff, we linearly interpolate along latitude bands between present-day land pixels to obtain runoff values for the presently-submerged Sunda Shelf. This approach preserves large N-S variation in runoff associated with the large-scale Hadley circulation and therefore should be reasonable to first-order, although it does not accurately capture the smaller-scale interactions between land and ocean/atmosphere circulation. For other minor islands in the region that were exposed 15, 10, or 5~m.y. ago, but are currently submerged, we take the same approach as that described for the Sunda Shelf to generate the runoff field. For the slope and lithology, we take the mean slope and Ca+Mg concentrations from neighbouring pixels. We also remove the Greenland ice sheet in the ``paleo-SEAIs'' scenarios, to be consistent with Northern Hemisphere ice sheets developing after 5~Ma \citep{Haug2005a}. The runoff field over Greenland is generated using the same method as that for the Sunda Shelf. For the slope, we take the mean slope value (0.0529~m/m) of land for which slope data exists around the edges of Greenland, and assign this value to all pixels of Greenland covered by the ice sheet. We also assign the Ca+Mg concentration of bulk continental crust to these pixels.
 
-To explore the sensitivity of our results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet, we also tested ``paleo-SEAI - Greenland'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the removal of the Greenland ice sheet. We also tested ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAI'' scenarios without the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. We find that the estimated steady state \pCOtwo's for the ``paleo-SEAI - Greenland'' and ``paleo-SEAI - Greenland - Sunda Shelf'' scenarios are only marginally higher than those of the ``paleo-SEAI'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the Sunda Shelf, and the low runoff values at high latitudes.
+To explore the sensitivity of our results to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet, we also tested ``paleo-SEAIs - Greenland'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAIs'' scenarios without the removal of the Greenland ice sheet. We also tested ``paleo-SEAIs - Greenland - Sunda Shelf'' scenarios for 15, 10, and 5~Ma, which are identical to that of the ``paleo-SEAIs'' scenarios without the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. We find that the estimated steady state \pCOtwo's for the ``paleo-SEAIs - Greenland'' and ``paleo-SEAIs - Greenland - Sunda Shelf'' scenarios are only marginally higher than those of the ``paleo-SEAIs'' scenarios (Fig. \ref{fig:scenario_pCO2_all}), suggesting that our results are relatively insensitive to the inclusion of the Sunda Shelf and the removal of the Greenland ice sheet. This insensitivity can be attributed to the low Ca+Mg concentrations of felsic and sediment lithologies in conjunction with the low relief across the Sunda Shelf, and the low runoff values at high latitudes.
 
 \begin{figure}[h!]
     \centering
@@ -289,7 +289,7 @@ Proxy-based \pCOtwo estimates for the past 20~m.y. are shown in Figure \ref{fig:
 
 \section*{Paleoshoreline Reconstruction and Geological Synthesis}
 
-Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in SEAI. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citet{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma), but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
+Geological maps, stratigraphic data, and previous paleoshoreline compilations were used to calculate the changes in different types of subaerially exposed rocks in the SEAIs. Following \citet{Molnar2015a}, we analyzed the area changes of islands that are larger than $\sim$200~km$^{2}$ (Fig. 1 in main text). We also included changes in areas of submerged continental shelves that were previously exposed, like the Sunda Shelf. Larger islands were further divided into regions based upon their position on microplates as defined by \citet{Matthews2016a}. Miocene to present stratigraphic columns were compiled from each region to develop an age model for paleoenvironmental indicators. In general, carbonate strata and thin-bedded siliciclastic strata were assumed to be deposited in a subaqueous marine environment, whereas evidence for exposure and terrestrial siliciclastic deposits were used as indicators of a subaerial paleoenvironment. Following previous paleoshoreline compilations and these environmental indicators, paleoshorelines were outlined in QGIS to calculate areas for the Early Pliocene (5 Ma), Late Miocene (10 Ma), and Middle Miocene (15 Ma). The paleoshoreline reconstructions within the paleogeographic models broadly coincide with sub-Epoch boundaries (i.e. Early Miocene = 23--16~Ma, Middle Miocene = 15.99--11.61~Ma, Late Miocene = 11.6--5.4~Ma, Pliocene =5.39--3.8 Ma), but we recognize that the biostratigraphic resolution is an additional source of uncertainty.
 
 Several new sources for paleoshoreline data have become available since \citet{Molnar2015a}. Particularly, for Sulawesi, we follow the recent stratigraphic compilation and paleoshorelines delineated by \citet{Nugraha2018a}, and in New Guinea, we follow \citet{Gold2017a} and \citet{Harrington2017a}. Although the outlines of our paleoshorelines are significantly different from those used for 5~Ma by \citet{Molnar2015a} our calculated area is comparable.
 
@@ -341,7 +341,7 @@ Exhumation of the modern Sunda-Banda Arc is the result of ongoing arc-continent 
 
 % \section*{Seawater Model}
 
-% If the weathering of juvenile lithologies of the SEAI played an important role in driving Neogene cooling, the intuitive expectation is that marine \SrSr should have decreased over the Neogene as the global weathering flux of low \SrSr juvenile lithologies increased (compensated by a decrease in the global weathering flux of high \SrSr radiogenic lithologies to maintain constant global \COtwo consumption). Contrary to this expectation, marine \SrSr has been rising since ca. 35~Ma (Fig. \ref{fig:seawater_model}). However, the global weathering flux of isotopically-representative lithologies can be decoupled from marine \SrSr via the regional weathering of isotopically-unique source rocks. For example, the decrease in slope in the marine \SrSr record ca. 15~Ma has been attributed to exhumation of relatively low \SrSr and high \OsOs Outer Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}. This change in slope could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAI during arc-continent collision.
+% If the weathering of juvenile lithologies of the SEAIs played an important role in driving Neogene cooling, the intuitive expectation is that marine \SrSr should have decreased over the Neogene as the global weathering flux of low \SrSr juvenile lithologies increased (compensated by a decrease in the global weathering flux of high \SrSr radiogenic lithologies to maintain constant global \COtwo consumption). Contrary to this expectation, marine \SrSr has been rising since ca. 35~Ma (Fig. \ref{fig:seawater_model}). However, the global weathering flux of isotopically-representative lithologies can be decoupled from marine \SrSr via the regional weathering of isotopically-unique source rocks. For example, the decrease in slope in the marine \SrSr record ca. 15~Ma has been attributed to exhumation of relatively low \SrSr and high \OsOs Outer Lesser Himalaya lithologies \citep{Myrow2015a, Colleps2018a}. This change in slope could also be at least partially driven by the exhumation of mafic and organic-rich forearc sediments in the SEAIs during arc-continent collision.
 
 % To test whether the Neogene marine \SrSr record is compatible with an increase in the global weathering flux of low \SrSr juvenile lithologies over the Neogene, we implement a simple seawater model that simulates changes in marine \SrSr that result from changing fluxes from several sources \citep{Brass1975a}:
 
