update links to GitHub and Zenodo

--- a/Manuscript/Supplementary_Information.tex
+++ b/Manuscript/Supplementary_Information.tex
@@ -98,7 +98,7 @@ Nicholas L. Swanson-Hysell\textsuperscript{1}
 
 \linenumbers
 
-These supplementary information materials provide details on the model framework used in this study. The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state/releases/tag/v1.0}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/GEOCLIM_Modern}.
+These supplementary information materials provide details on the model framework used in this study. The code for the GEOCLIM model used in this study can be found at: \url{https://github.com/piermafrost/GEOCLIM-dynsoil-steady-state/releases/tag/v1.0}. The code that generated the inputs and analyzed the output of the GEOCLIM model can be found at: \url{https://github.com/Swanson-Hysell-Group/2020_Southeast_Asian_Islands} or \url{https://doi.org/10.5281/zenodo.4021653}.
 
 \section*{Implementation of Lithology}
 
